# BassMINT

./: .gitignore  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  YIN_BASS_ANALYSIS.md
hardware/schematics/: bassmint.kicad_prl  bassmint.kicad_sch  bassmint_symbols.kicad_sym  sym-lib-table
src/: main.cpp
src/app/: App.cpp  App.h  StringManager.cpp  StringManager.h
src/core/: MidiEvents.cpp  MidiEvents.h  NoteMapping.cpp  NoteMapping.h  SysExEncoder.cpp  SysExEncoder.h  Types.h
src/dsp/: EnvelopeFollower.cpp  EnvelopeFollower.h  PitchDetectorYin.cpp  PitchDetectorYin.h  RingBuffer.h  StringProcessor.cpp  StringProcessor.h
src/hal/: AdcDriver.cpp  AdcDriver.h  BoardConfig.h  LedDriver.cpp  LedDriver.h  MidiDinOut.cpp  MidiDinOut.h  Timer.cpp  Timer.h
